# omni-visual

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  list_models.py  mcp_config.json  models_output.txt  output.txt  pyproject.toml  start_server.bat  test_connectivity.py
server/: __init__.py  main.py
src/omni_visual/: __init__.py  agent.py  cache.py  config.py  observability.py  prompts.py
src/omni_visual/.adk/: session.db
src/omni_visual/tools/: __init__.py  vision.py
